<resources>
    <string name="app_name">Box to Market</string>
    <string name="app_name_machines">The App of the Machines</string>
    <string name="TvLogin">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="registrese">Register</string>
    <string name="title_activity_main">Box To Market</string>
    <string name="action_pass">Change Password</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pais">Select your country</string>
    <string name="apellidos">Last Name</string>
    <string name="de_identificaci_n">Recipent user ID number</string>
    <string name="telefono_mov_l">Mobile Number</string>
    <string name="checkbox">I agree terms and conditions</string>
    <string name="siguiente">Next</string>
    <string name="usuario">User</string>
    <string name="clave_de_4_digitos">4 digits password</string>
    <string name="confirmar_clave">Confirm 4 digits password</string>
    <string name="email">Email</string>
    <string name="info_fallas_comunicacion">COMMUNICATION FAIL TRY LATER</string>
    <string name="inf_dialog">"In process. Please wait..."</string>
    <string name="tipo_tarjeta">Credit Card</string>
    <string name="tipo_creditos">My Wallet</string>
    <string name="preferencias">preferencias</string>
    <string name="tipo_compensacion">Bank Transfer</string>
    <string name="password">Password</string>
    <string name="recarga">Add Money</string>
    <string name="title_recarga">Add Money to My Wallet</string>
    <string name="compensacion">Request Compensation</string>
    <string name="compensacion_home">Compensation:</string>
    <string name="token_buy">Get your Token</string>
    <string name="transferencia">Transfer</string>
    <string name="alerta_terminos">Please check terms and conditions</string>
    <string name="alerta_usuario_espacio">User without spaces</string>
    <string name="alerta_usuario_pass">Password do not match</string>
    <string name="alerta_usuario_pass_lon">Password 4 digits</string>
    <string name="alerta_usuario_email">Invalid Email</string>
    <string name="Info">Info</string>
    <string name="tarjeta_credito">Enroll Credit Card</string>
    <string name="solicitar">Request</string>
    <string name="cuenta_bancaria">Bank account registered:</string>
    <string name="transacciones_recientes">Recent Transactions</string>
    <string name="saldo">USD $%1$s</string>
    <string name="dolar_hoy">Dolar today in %2$s: $%1$s</string>
    <string name="mi_billetera">My Wallet</string>
    <string name="vender">Sell</string>
    <string name="comprar">Buy</string>
    <string name="seleccione_el_metodo">Select a payment method</string>
    <string name="monto">Value</string>
    <string name="error_token">Try later</string>
    <string name="ingrese_valor">Enter the value in USD Dollars</string>
    <string name="ingrese_token">Enter the token number</string>
    <string name="confirmacion">Confirm</string>
    <string name="registrar_tarjeta_de_credito">add a Credit Card</string>
    <string name="cc_cancelada">Visual credit card scan was canceled</string>
    <string name="postal">"Postal Code: "</string>
    <string name="cvvcc">"CVV has "</string>
    <string name="expira">"Expiration Date: "</string>
    <string name="numero_cc">"Card Number: "</string>
    <string name="digitos">" digits.\n"</string>
    <string name="alerta_cuentas">You do not have accounts</string>
    <string name="ingrese_el_monto_a_compensar">Enter your value for request</string>
    <string name="fecha_de_nacimiento">Born Date</string>
    <string name="btm_club">club</string>
    <string name="comprar_token">Get a Token</string>
    <string name="chat">chat</string>
    <string name="campos_vacios">Empty fields</string>
    <string name="action_profile_pic">Profile Picture</string>
    <string name="solicitar_compensacion">Get your request</string>
    <string name="id_del_destinatario">Recipient ID #</string>
    <string name="valor_a_transferir">Value to transfer</string>
    <string name="cerrar">Close Session</string>
    <string name="transferir_creditos">Transfer</string>
    <string name="informaci_n_del_destinatario">Transfer from My Wallet to another user</string>
    <string name="nombres">First Name</string>
    <string name="error_monto">Please enter a correct value</string>
    <string name="please_check_your_info_and_clic_for_continue">Please check your info and click for continue.</string>
    <string name="forgot_emailbox_hint">Enter your email</string>
    <string name="forgot_button_send">Send email</string>
    <string name="forgot_activity_title">Forgot password?</string>
    <string name="metodo_de_recarga">Select a payment method</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="buy_subscriptions">Buy</string>
    <string name="pay_subscription">Confirm Payment</string>
    <string name="list_clubs_available">My Clubs</string>
    <string name="list_subscriptions_available">Available Subscriptions</string>
    <string name="search_bluethoot">Search devices</string>
    <string name="blee_click_to_pay">Touch to pay</string>
    <string name="log_out">Go to Close Session to exit</string>
    <string name="buy_clubs_subscription">Subscriptors Clubs</string>
    <string name="detail_buy_subscriptions">Buy Subscriptions</string>
    <string name="detail_buy_subscription_confirm">Confirm Payment</string>
    <string name="select_payment_method">Select a payment method:</string>
    <string name="buy_a_token_title">Buy a Token</string>
    <string name="transfer_to_another_user">Transfers</string>
    <string name="help_compensation_text">Compensation for sales on the platform</string>
    <string name="home_button_transactions">Transactions</string>
    <string name="transfer_compensation_mywallet">Transfer from compensation to My Wallet</string>
    <string name="transfer">Transfer</string>
    <string name="help_transfer_compensation_wallt">Transfer from Compensation to My Wallet</string>
    <string name="title_transfer_comp_wallet">Transfer Compensation to My Wallet</string>
    <string name="go_to_home">Back to My Wallet</string>
    <string name="change_password">Change password</string>
    <string name="ui_change_pass_actualpass">Enter your current password</string>
    <string name="ui_change_pass_actualpass_message_dialog">Are you sure want to Change Password?</string>
    <string name="ui_change_pass_newpass">Enter 4 Digits New Password</string>
    <string name="ui_change_pass_re_newpass">Confirm 4 Digits New Password</string>
    <string name="ui_change_pass_button_name">Change Password</string>
    <string name="ui_change_pass_msg_sucess">Password changed successfully</string>
    <string name="ui_pass_change_msg_warning">Password not changed. Please try again</string>
    <string name="ui_transfer_money_message_dialog_to_another_user">Are you sure want to Transfer from My Wallet to another User?</string>
    <string name="ui_transfer_money_message_fields_empty">All fields are required. Try again</string>
    <string name="ui_transfer_money_message_dialog">Are you sure want to Transfer Compensation to My Wallet?</string>
    <string name="ui_transfer_money_message_zero_money">Please enter a correct value</string>
    <string name="ui_transfer_money_message_successful_transfer">Transfer has been successful</string>
    <string name="ui_transfer_money_message_warning_transfer">Transfer has not been completed. Try again</string>
    <string name="ui_buy_token_empty_fields">All fields are required. Try again</string>
    <string name="ui_buy_token_no_credit_cards">No credit cards found</string>
    <string name="ui_buy_token_ok_button">I Agree</string>
    <string name="ui_buy_token_input_value_local">Enter value in Local Money</string>
    <string name="ui_buy_token_cancel_button">Cancel</string>
    <string name="ui_buy_token_dialog_message">Are you sure to Buy a Token?</string>
    <string name="ui_buy_token_message_error">Transfer has not been completed. Try again</string>
    <string name="ui_main_my_wallet_title">My Wallet:</string>
    <string name="ui_buy_compensation_dialog_message">Are you sure to Request a Compensation?</string>
    <string name="ui_general_dialog_password">Confirm 4 digits password</string>
    <string name="ui_general_dialog_confirm">Confirm</string>
    <string name="ui_general_dialog_cancel">Cancel</string>
    <string name="ui_charge_message_dialog">Are you sure want to Add Money to My Wallet?</string>
    <string name="ui_subscriptions_payment_method_token">Token</string>
    <string name="ui_subscriptions_payment_method_credit_card">Credit Card</string>
    <string name="ui_subscriptions_payment_method_mywallet">My Wallet</string>
    <string name="ui_subscriptions_message_dialog">Are sure want to Buy a Subscription?</string>
    <string name="ui_subscriptions_token_hint">Enter Token number</string>
    <string name="ui_compensation_button_text">Register Bank Account</string>
    <string name="ui_ble_mini_payment_method_subscriptions">Subscription</string>
    <string name="ui_ble_mini_payment_method_credit_card">Credit Card</string>
    <string name="ui_ble_mini_payment_method_mywallet">My Wallet</string>
    <string name="ui_ble_mini_machines">Machines</string>
    <string name="ui_ble_mini_select">Select</string>
    <string name="ui_ble_mini_line_selected">Line selected: </string>
    <string name="ui_aux_payment_title">Payment</string>
    <string name="ui_ble_mini_stock_title">Select a product line: </string>
    <string name="ui_ble_vending_title">Enter a value to charge</string>
    <string name="ui_aux_power_available">BtM Power Available</string>
    <string name="ui_aux_power_available_message">BtM Power machine is ready for use. Please select a time and leave the power flow. </string>
    <string name="ui_aux_power_bussy">BtM Power Busy</string>
    <string name="ui_aux_power_bussy_message">BtM Power is busy. Remain time: </string>
    <string name="ui_aux_power_saturated">BtM Power Saturated</string>
    <string name="ui_aux_power_saturated_message">BtM Power is actually saturated. Try again later.</string>
    <string name="ui_ble_vending_button">Pay</string>
    <string name="ui_aux_vending_message">Enter value to pay</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="is_serial">Serial Present:</string>
    <string-array name="roygbiv">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="button">Send</string>
    <string name="red_slide">Red</string>
    <string name="blue_slide">Blue</string>
    <string name="green_slide">Green</string>
    <string name="ui_ble_mini_message_found">Bleecard compatible machines available for connection were not found. Please try to scan again.</string>
    <string name="ui_ble_mini_blee_list_title">Machines</string>
    <string name="ui_ble_mini_blee_list_button_scan">Scan again</string>
</resources>