<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/clave_de_4_digitos"
        android:inputType="numberPassword"
        android:padding="5dp"
        tools:ignore="NestedWeights" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/confirmar_clave"
        android:inputType="numberPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/de_identificaci_n"
        android:inputType="number"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/nombres"
        android:inputType="textPersonName"
        android:padding="5dp"
        tools:ignore="NestedWeights" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/apellidos"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/backgound_edit_text"
        android:hint="@string/telefono_mov_l"
        android:inputType="phone"
        android:padding="5dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:entries="@array/pais_select"
        android:spinnerMode="dialog" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="6dp"
        android:padding="5dp"
        android:text="@string/checkbox" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:padding="5dp"
        android:text="@string/registrese"
        android:textColor="@android:color/white" />

</LinearLayout>
