<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/usuario"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/backgound_edit_text"
        android:layout_margin="10dp"
        android:id="@+id/editText3"
        android:layout_weight="1"/>

    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/clave_de_4_digitos"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/backgound_edit_text"
        android:layout_margin="10dp"
        android:id="@+id/editText4" />

    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/confirmar_clave"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/backgound_edit_text"
        android:layout_margin="10dp"
        android:id="@+id/editText5" />

    <EditText
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/backgound_edit_text"
        android:layout_margin="10dp"
        android:id="@+id/editText6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/de_identificaci_n"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/backgound_edit_text"
        android:id="@+id/editText9"
        android:layout_margin="10dp"
        android:layout_weight="1" />

    <Button
        android:layout_weight="1"
        android:text="@string/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_margin="10dp"
        android:onClick="prueba"
        android:background="@drawable/background_button"
        android:textColor="@android:color/white"/>
    
</LinearLayout>
