<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_cleared"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="btm.app.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/usuario"
            android:digits="-0123456789qwertzuiopasdfghjklyxcvbnm_"
            android:inputType="textPersonName"
            android:padding="7dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/clave_de_4_digitos"
            android:inputType="numberPassword"
            android:padding="7dp"
            android:maxLength="4"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/confirmar_clave"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:padding="7dp" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/de_identificaci_n"
            android:inputType="number"
            android:padding="7dp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:padding="7dp"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:padding="7dp" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="7dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:entries="@array/pais_select"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/editText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/backgound_edit_text"
            android:hint="@string/telefono_mov_l"
            android:inputType="phone"
            android:padding="7dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="6dp"
            android:padding="5dp"
            android:text="@string/checkbox" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:padding="5dp"
            android:text="@string/registrese"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!--<FrameLayout
        android:id="@+id/reg_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"></FrameLayout>-->

</RelativeLayout>
