<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_transfer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/fondoimg"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="btm.app.TransferActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/informaci_n_del_destinatario"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/TextColor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextIdTransfer"
        android:hint="@string/de_identificaci_n"
        android:background="@drawable/backgound_edit_text"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextMontoTransfer"
        android:hint="@string/ingrese_valor"
        android:background="@drawable/backgound_edit_text"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button"
        android:text="@string/transferir_creditos"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/transferCompButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/colorPrimary"
        android:text="@string/transfer_compensation_mywallet"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
